--- a/theme.toml
+++ b/theme.toml
@@ -4,7 +4,7 @@ licenselink = "https://github.com/masputrawae/my-notes?tab=MIT-1-ov-file"
 description = "A clean, modern Hugo theme tailored for personal knowledge management and note-taking. It supports multilingual content and provides flexible organization options."
 
 homepage = "https://github.com/masputrawae/my-notes"
-demosite = "https://wumbojb.github.io/my-theme"
+demosite = "https://wumbojb.github.io/my-notes-demo"
 
 tags = ['minimalist', 'responsive', 'personal', 'article', 'documents', 'modern']
 features = ['lightweight', 'fast', 'SEO optimized', 'themes switcher', 'multilingual', '3 sidebar', 'tree navigation'] 
